# PythonOnTheRun

./: INTRO.md  README.md  READMECoverage.md  READMEGit.md  READMEGitLab.md  READMEPycharm.md  pyproject.toml  runner.py  setup.py
movepython/: __init__.py
movepython/advanced/: date_time.py
movepython/data_structures/: dict.py  list.py  string.py
movepython/examples/: demo.py
