[tool.poetry]
name = "move-python"
version = "1.0.0"
description = "Move Python"
authors = ["Jin Zhou <jin_zhou@unigroup.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
coverage = "^6.3"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
